--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@ body {
 }
 
 .top-bar a {
-  float: left;
   display: block;
   color: white;
   text-align: center;
@@ -93,7 +92,7 @@ h1 {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 14px;
-  transition: background 0.3s ease;
+  transition: 0.3s ease;
 }
 
 .recipe-item a:hover {
