--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@
     text-decoration: none;
     text-transform: uppercase;
     font-size: 14px;
-    transition: background 0.3s ease;
+    transition: 0.3s ease;
   }
 
   .recipe-item a:hover {
